@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-03-15T00:47:29Z",
+  "timestamp" : "2025-03-17T00:51:20Z",
   "count_outdated" : 1409,
   "uniques_outdated" : 408,
-  "count" : 1417,
-  "uniques" : 415,
+  "count" : 1418,
+  "uniques" : 416,
   "views" : [
     {
       "timestamp": "2025-03-03T00:00:00Z",
@@ -31,6 +31,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-03-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
