@@ -1,6 +1,6 @@
 {
-  "count": 8,
-  "uniques": 7,
+  "count": 9,
+  "uniques": 8,
   "views": [
     {
       "timestamp": "2025-03-03T00:00:00Z",
@@ -16,6 +16,11 @@
       "timestamp": "2025-03-14T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-03-16T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
